MARTUSDEV-1926: Change buttons style in PopupConfirmation

--- a/martus-client/source/org/martus/client/swingui/jfx/generic/PopupConfirmation.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/generic/PopupConfirmation.fxml
@@ -14,10 +14,10 @@
    <bottom>
       <BorderPane BorderPane.alignment="CENTER">
          <right>
-            <Button fx:id="fxNoButton" mnemonicParsing="false" onAction="#noPressed" BorderPane.alignment="CENTER" />
+            <Button fx:id="fxNoButton" mnemonicParsing="false" onAction="#noPressed" BorderPane.alignment="CENTER" styleClass="button-gray" />
          </right>
          <left>
-            <Button fx:id="fxYesButton" mnemonicParsing="false" onAction="#yesPressed" BorderPane.alignment="CENTER" />
+            <Button fx:id="fxYesButton" mnemonicParsing="false" onAction="#yesPressed" BorderPane.alignment="CENTER" styleClass="button-green" />
          </left>
       </BorderPane>
    </bottom>
