MARTUSDEV-1926: Change buttons style in export bulletin dialog

--- a/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/FxExportItems.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/FxExportItems.fxml
@@ -37,7 +37,7 @@
                <children>
                   <Label text="%Location" />
                   <TextField fx:id="fileLocation" editable="false" prefHeight="26.0" prefWidth="360.0" />
-                  <Button mnemonicParsing="false" onAction="#onChangeFileLocation" text="%Button.ExportTo" />
+                  <Button mnemonicParsing="false" onAction="#onChangeFileLocation" text="%Button.ExportTo" styleClass="button-green" />
                </children>
             </HBox>
          </children>
