MARTUSDEV-1926: Change buttons style in bulletin attachments

--- a/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/FxAttachments.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/FxAttachments.fxml
@@ -20,7 +20,7 @@
    <top>
       <HBox BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="addAttachmentButton" mnemonicParsing="false" onAction="#onAddAttachment" text="%Button.addattachment" />
+            <Button fx:id="addAttachmentButton" mnemonicParsing="false" onAction="#onAddAttachment" text="%Button.addattachment" styleClass="button-green" />
          </children>
       </HBox>
    </top>
