--- a/martus-client/source/org/martus/client/swingui/jfx/landing/general/ServerResponseTable.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/landing/general/ServerResponseTable.fxml
@@ -23,7 +23,7 @@
 					</TableView>
 						<HBox alignment="CENTER_RIGHT">
 							<children>
-								<Button mnemonicParsing="false" onAction="#onOkButton" text="%Button.InputServerNameOk"></Button>
+								<Button mnemonicParsing="false" onAction="#onOkButton" text="%Button.InputServerNameOk" styleClass="button-green"></Button>
 							</children>
 							<padding>
 								<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
