MARTUSDEV-1926: Change buttons style in key backup menu

--- a/martus-client/source/org/martus/client/swingui/jfx/landing/general/KeyBackup.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/landing/general/KeyBackup.fxml
@@ -16,7 +16,7 @@
             <VBox BorderPane.alignment="CENTER">
                <children>
               <Pane fx:id="contentPane" prefHeight="250.0" />
-              <Button mnemonicParsing="false" onAction="#onExportMultiKey" text="%Button.ExportMultiKey" />
+              <Button mnemonicParsing="false" onAction="#onExportMultiKey" text="%Button.ExportMultiKey" styleClass="button-green" />
                   <Label />
                   <Label text="%ExportMultiKeyNote" />
                </children>
