MARTUSDEV-1926: Change buttons style in author information menu

--- a/martus-client/source/org/martus/client/swingui/jfx/landing/general/AuthorInformation.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/landing/general/AuthorInformation.fxml
@@ -39,7 +39,7 @@
 		<bottom>
 			<VBox styleClass="mainTextBox">
    <children>
-   				<Button mnemonicParsing="false" onAction="#onSaveChanges" text="%Button.SaveChanges" />
+   				<Button mnemonicParsing="false" onAction="#onSaveChanges" text="%Button.SaveChanges" styleClass="button-green" />
    </children>
 			</VBox>
 		</bottom>
