--- a/martus-client/source/org/martus/client/swingui/jfx/landing/general/SettingsForSystem.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/landing/general/SettingsForSystem.fxml
@@ -56,7 +56,7 @@
                </tooltip></CheckBox>
          </children>
       </VBox>
-      <Button mnemonicParsing="false" onAction="#onSaveChanges" text="%Button.SaveChanges" />
+      <Button mnemonicParsing="false" onAction="#onSaveChanges" text="%Button.SaveChanges" styleClass="button-green" />
 </children>
    <padding>
       <Insets bottom="10.0" left="10.0" top="10.0" />
