--- a/martus-client/source/org/martus/client/swingui/jfx/generic/InitialSignin.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/generic/InitialSignin.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<StackPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane prefWidth="550" prefHeight="400" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <VBox>
             <HBox styleClass="singIn-topBar" alignment="CENTER">
