--- a/martus-client/source/org/martus/client/swingui/jfx/generic/Signin.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/generic/Signin.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane prefWidth="550" prefHeight="400" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <VBox>
             <padding>
