--- a/martus-client/source/org/martus/client/swingui/jfx/contacts/ContactsShell.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/contacts/ContactsShell.fxml
@@ -5,18 +5,14 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-    <BorderPane layoutX="0.0" layoutY="0.0" prefWidth="910.0" styleClass="pageMargin" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
-      <bottom>
-        <BorderPane prefWidth="910.0">
-          <left>
-            <Label prefWidth="25.0"></Label>
-          </left>
-          <right>
+<BorderPane prefWidth="910.0" styleClass="pageMargin" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+    <center>
+        <HBox fx:id="contentPane" prefWidth="840.0" />
+    </center>
+    <bottom>
+        <HBox>
+            <HBox HBox.hgrow="ALWAYS" />
             <Button id="" fx:id="closeButton" mnemonicParsing="false" onAction="#onClose" prefHeight="35.0" prefWidth="280.0" text="%Button.ContactsSaveClose" BorderPane.alignment="CENTER_RIGHT" styleClass="button-green" />
-          </right>
-        </BorderPane>
-      </bottom>
-      <center>
-        <Pane fx:id="contentPane" prefWidth="840.0" />
-      </center>
-    </BorderPane>
+        </HBox>
+    </bottom>
+</BorderPane>
